--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -32,11 +32,7 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   introduction_screen: ^3.0.2
-  shared_preferences:
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  font_awesome_flutter: 10.1.0
 
 dev_dependencies:
   flutter_test:
