--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   hive_flutter: ^1.1.0
   introduction_screen: ^3.0.2
   font_awesome_flutter: 10.1.0
+  data_tables: 1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
   assets:
      - assets/splash.png
      - assets/onboarding/
+     - assets/Profile/default.jpg
+     - assets/logo.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
