--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   introduction_screen: ^3.0.2
   font_awesome_flutter: 10.1.0
   flutter_calendar_carousel: ^2.1.0
+  http: 0.13.4
 
 dev_dependencies:
   flutter_test:
