--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
      - assets/splash.png
      - assets/onboarding/
      - assets/signup/
+     - assets/Profile/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
