--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: 0.13.4
   flutter_local_notifications: ^9.4.1
   rxdart: ^0.27.3
+  mysql1: 0.19.2
 
 dev_dependencies:
   flutter_test:
