Changed to MYSQL1 library.

--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_local_notifications: ^9.4.1
   rxdart: ^0.27.3
   syncfusion_flutter_calendar: ^20.1.52
+  mysql_client: ^0.0.16
 
 dev_dependencies:
   flutter_test:
