--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   rxdart: ^0.27.3
   syncfusion_flutter_calendar: ^20.1.52
   mysql_client: ^0.0.16
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
