--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   hive_generator: ^1.1.1
+  build_runner: ^1.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
