--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/signup/
     - assets/Profile/
     - assets/images/
+    - assets/verify_email/
+    - - assets/verify_email/man_email.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
