--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   mysql_client: ^0.0.16
   intl: ^0.17.0
   date_time_picker: ^2.1.0
+  image_picker: ^0.8.5+3
+
 
 dev_dependencies:
   flutter_test:
