--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mysql_client: ^0.0.16
   intl: ^0.17.0
   date_time_picker: ^2.1.0
+  email_auth: any
 
 dev_dependencies:
   flutter_test:
