--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   intl: ^0.17.0
   date_time_picker: ^2.1.0
   image_picker: ^0.8.5+3
-
+  email_auth: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +75,7 @@ flutter:
     - assets/signup/
     - assets/Profile/
     - assets/images/
+    - assets/verify_email/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
