--- a/utmstudyplanner_mobile/pubspec.yaml
+++ b/utmstudyplanner_mobile/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   image_picker: ^0.8.5+3
   email_auth: ^1.0.0
   timetable_view: ^0.3.0
-  dropdown_formfield: ^0.1.4
   syncfusion_flutter_datagrid: 20.1.55
+  dynamic_timeline: ^0.1.1
 
 dev_dependencies:
   flutter_test:
